--- a/Flex Practice/index.html
+++ b/Flex Practice/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Flex</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1 style="color: cadetblue;">CSS Flex</h1>
+    <div class="container">
+        <div class="box">1</div>
+        <div class="box box2">2</div>
+        <div class="box box3">3</div>
+    </div>
 </body>
 </html>
