finished main body

--- a/New Website/index.html
+++ b/New Website/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <!-- THis is a navbar -->
         <nav>
             <div class="menu-container">
                 <div class="logo">
@@ -22,7 +23,26 @@
             </div>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <section>
+            <div class="banner-container">
+                <div class="bannertext">
+                    <h1 class="title">Better design
+                        for <br>
+                        your digital
+                        products</h1>
+                        <p class="description">We are a creative studio specializing in UI/UX
+                            design, development and strategy.</p>
+                            <button class="btn">Explore More</button>
+                        </div>
+                <div class="bannerphoto">
+                    <img class="bannerimg" src="/images/banner.png" alt="">
+                </div>
+                
+               
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
