--- a/New Website/index.html
+++ b/New Website/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Website</title>
+    <link rel="shortcut icon" href="/KO-b23a2a5e.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -40,6 +41,46 @@
                 </div>
                 
                
+            </div>
+        </section>
+        <section>
+            <!-- this is about us section -->
+            <h1 class="title about">About Us</h1>
+            <div class="about-container">
+                <div class="aboutinfo">
+                    <h1>We grow brands through
+                        bold & strategic creatives</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        <button class="btn">Contact Us</button>
+                </div>
+                <div class="aboutphoto">/
+                    <img class="bannerimg" src="/images/section.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- surface section -->
+        <section>
+            <h1 class="title about" style="background-color: black; color: white ; padding-top: 80px ; padding-bottom: 20px;" >Our Services</h1>
+            <div class="surface-container">
+                <div class="box">
+                   <img class="icon" src="/icon/0.png" alt="">
+                   <h2 class="boxtitle">Web development</h2>
+                   <p class="box-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et facilis accusantium odio tempora repudiandae ipsa pariatur doloremque iusto saepe atque!</p>
+                   <button class="btn boxbtn">Details</button>
+                </div>
+                <div class="box">
+                   <img class="icon" src="/icon/1.png" alt="">
+                   <h2 class="boxtitle">Web development</h2>
+                   <p class="box-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et facilis accusantium odio tempora repudiandae ipsa pariatur doloremque iusto saepe atque!</p>
+                   <button class="btn boxbtn">Details</button>
+                </div>
+                <div class="box">
+                   <img class="icon" src="/icon/2.png" alt="">
+                   <h2 class="boxtitle">Web development</h2>
+                   <p class="box-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et facilis accusantium odio tempora repudiandae ipsa pariatur doloremque iusto saepe atque!</p>
+                   <button class="btn boxbtn">Details</button>
+                </div>
             </div>
         </section>
     </main>
