--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <div class="aboutinfo">
                     <h1>We grow brands through
                         bold & strategic creatives</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        <p>I WANT RTX.I WANT RTX.I WANT RTX.I WANT RTX.I WANT RTX.</p>
+                        <p>I WANT RTX.I WANT RTX.I WANT RTX.I WANT RTX.I WANT RTX.</p>
                         <button class="btn">Contact Us</button>
                 </div>
                 <div class="aboutphoto">/
@@ -84,6 +84,41 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="Contact">
+        <div ><img class="logo1" src="/logo/logo-light.png" alt="">
+                <p>Auctor blandit dolorem primis eius odit <br>
+                    soluta molestie? Malesunda elementum <br>
+                    aut doloremane labo</p></div>
+             <div class="list-item">
+                 <h1>Useful Links</h1>
+                 <li>About us</li>
+                 <li>Carson</li>
+                 <li> News & Artciles</li>
+                  <li>legal Notice</li>
+                </div>
+        <div class="supports">
+                <h1>Supports</h1>
+                <li>Help Center</li>
+                <li>Contact Us</li>
+                <li>FAO</li>
+                <li>Parcat Community</li>
+
+            </div>
+        <div class="contactinfo">
+             <h1>Contact Information</h1>
+             <p>Feel free to contact & reach us !! <br>
+                3557 Derek Drive, Orlando, Florida <br>
+                +1(456)657-887 <br>
+                info@domain.com</p>
+         </div>    
+        
+
+        </div>
+        <div class="copyright">
+            <hr>
+            <h3>Copyright © 2023 LOBAN. All Rights Reserved</h3>
+         </div>
+    </footer>
 </body>
 </html>
