--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Website</title>
-    <link rel="shortcut icon" href="/KO-b23a2a5e.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./KO-b23a2a5e.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -37,7 +37,7 @@
                             <button class="btn">Explore More</button>
                         </div>
                 <div class="bannerphoto">
-                    <img class="bannerimg" src="/images/banner.png" alt="">
+                    <img class="bannerimg" src="./images/banner.png" alt="">
                 </div>
                 
                
@@ -55,7 +55,7 @@
                         <button class="btn">Contact Us</button>
                 </div>
                 <div class="aboutphoto">/
-                    <img class="bannerimg" src="/images/section.png" alt="">
+                    <img class="bannerimg" src="./images/section.png" alt="">
                 </div>
             </div>
         </section>
@@ -70,13 +70,13 @@
                    <button class="btn boxbtn">Details</button>
                 </div>
                 <div class="box">
-                   <img class="icon" src="/icon/1.png" alt="">
+                   <img class="icon" src="./icon/1.png" alt="">
                    <h2 class="boxtitle">Web development</h2>
                    <p class="box-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et facilis accusantium odio tempora repudiandae ipsa pariatur doloremque iusto saepe atque!</p>
                    <button class="btn boxbtn">Details</button>
                 </div>
                 <div class="box">
-                   <img class="icon" src="/icon/2.png" alt="">
+                   <img class="icon" src="./icon/2.png" alt="">
                    <h2 class="boxtitle">Web development</h2>
                    <p class="box-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et facilis accusantium odio tempora repudiandae ipsa pariatur doloremque iusto saepe atque!</p>
                    <button class="btn boxbtn">Details</button>
@@ -86,7 +86,7 @@
     </main>
     <footer>
         <div class="Contact">
-        <div ><img class="logo1" src="/logo/logo-light.png" alt="">
+        <div ><img class="logo1" src="./logo/logo-light.png" alt="">
                 <p>Auctor blandit dolorem primis eius odit <br>
                     soluta molestie? Malesunda elementum <br>
                     aut doloremane labo</p></div>
