added path again

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h1 class="title about" style="background-color: black; color: white ; padding-top: 80px ; padding-bottom: 20px;" >Our Services</h1>
             <div class="surface-container">
                 <div class="box">
-                   <img class="icon" src="/icon/0.png" alt="">
+                   <img class="icon" src="./icon/0.png" alt="">
                    <h2 class="boxtitle">Web development</h2>
                    <p class="box-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et facilis accusantium odio tempora repudiandae ipsa pariatur doloremque iusto saepe atque!</p>
                    <button class="btn boxbtn">Details</button>
