--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <div class="menu-container">
                 <div class="logo">
-                    <img class="logophoto" src="/logo/logo-light.png" alt="">
+                    <img class="logophoto" src="./logo/logo-light.png" alt="">
                 </div>
                 <div class="menus">
                     <li class="item">home-1</li>
